syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "SystemContextDescriptorType";

import "sdc/biceps/abstractdevicecomponentdescriptor.proto";
import "sdc/biceps/patientcontextdescriptor.proto";
import "sdc/biceps/locationcontextdescriptor.proto";
import "sdc/biceps/ensemblecontextdescriptor.proto";
import "sdc/biceps/operatorcontextdescriptor.proto";
import "sdc/biceps/workflowcontextdescriptor.proto";
import "sdc/biceps/meanscontextdescriptor.proto";

message SystemContextDescriptor {
  AbstractDeviceComponentDescriptor abstract_device_component_descriptor = 1;
  PatientContextDescriptor patient_context = 2;
  LocationContextDescriptor location_context = 3;
  repeated EnsembleContextDescriptor ensemble_context = 4;
  repeated OperatorContextDescriptor operator_context = 5;
  repeated WorkflowContextDescriptor workflow_context = 6;
  repeated MeansContextDescriptor means_context = 7;
}
